# workstation-playbook

./: .ansible-lint.yml  .gitignore  LICENSE  README.md  ansible.cfg  inventory.yml  playbook.yml  pyproject.toml  requirements.yml
docs/: nitrokey_pam.md
molecule/default/: converge.yml  molecule.yml  verify.yml
playbooks/: walle.yml  workstation.yml
roles/archlinux/desktop_environment/tasks/: main.yml
roles/archlinux/firejail/tasks/: main.yml
roles/archlinux/firejail/tasks/files/profiles/: evince.local  evince.profile  firefox.local  firefox.profile  keepassxc.local  keepassxc.profile  loupe.local
roles/archlinux/nitrokey/tasks/: main.yml
roles/debian/debian_apt_repository/tasks/: main.yml
roles/debian/desktop/tasks/: main.yml
roles/debian/firefox/tasks/: main.yml
roles/debian/firewall/tasks/: main.yml
roles/debian/jellyfin_media_player/tasks/: main.yml
roles/debian/locales/defaults/: main.yml
roles/debian/locales/tasks/: main.yml
roles/debian/locales/templates/: locale.gen.j2
roles/debian/steam/tasks/: main.yml
roles/debian/unattended_upgrades/tasks/: main.yml
roles/debian/xone/defaults/: main.yml
roles/debian/xone/tasks/: main.yml
roles/desktop_environment/tasks/: main.yml
roles/git/tasks/: main.yml
roles/ide/files/: catppuccin.json  settings.json
roles/ide/tasks/: main.yml
roles/nitrokey/tasks/: main.yml
roles/openssh-client/tasks/: main.yml
roles/shell/files/: .zimrc  .zshrc
roles/shell/tasks/: main.yml
roles/terminal/files/: alacritty.toml
roles/terminal/tasks/: main.yml
